src/styles/utils/_vars.scss
$white: #fff;
$black: #000;
$contrastBlue: #05c2df;
$darkBlue: #191536;
$darkBlueHover: #110e25;
$bgBlack: #05040b;
$darkGrey: #2f2f2f;
$textGrey: #929292;
$borderGrey: #212121;
$borderInput: #2f2f2f;
$imgBorder: #0e0c1e;
$inputInvalid: #860404;
$techButtonActive: #07798b;
$techButtonBorder: rgba(255, 255, 255, 0.14);
$bgWindowContainer: rgba(0, 0, 0, 0.7);

$bgGradient: linear-gradient(100.83deg, $darkBlue 0.67%, $black 100%);
$shadowGradient:
  linear-gradient(180deg,
  rgba(0, 0, 0, 0.21) 0%,
  rgba(4, 4, 4, 0.59) 23.44%,
  #050505 100%);

$transitionDefault: 0.3s;
$paddingsHorMob: 20px;
$lineHeightFooterMob: 18px;
$iconHeightCustom: 65%;

